   etc.) for `riello_usb` and `richcomm_usb` [#1763] and updated man pages
   of all USB drivers using these options to include the same description
   [#1766]

 - Added an `allow_duplicates` flag for common USB matching options which
   may help monitor several related no-name devices (although without knowing
   reliably which one is which... better than nothing) [#1756]

 - Stuck drivers that do not react to `SIGTERM` quickly are now retried with
   `SIGKILL` [#1424]

 - Each driver should now report its `driver.state` to help readers determine
   whether it is initializing, reconnecting, or running regular loops [#1767]

 - Code which resolves full paths to libraries should now consider the common
   environment variable `LD_LIBRARY_PATH` as a preferred possible override
   to built-in paths (note that most operating systems advise against setting
   this variable unless troubleshooting, although other systems rely on it)
   [#805]

 - The nut-scanner program was updated to fall back to loading unresolved
   library filenames, hoping that `lt_dlopen()` implementation on the current
   platform would find library files better [#805]

 - Detection of `libltdl` in `configure` script updated with fallback code to
   find it on systems that deliver the library to `/usr/local/lib` (e.g. on
   FreeBSD) [#1577]

 - An explicit `configure --with-nut-scanner` toggle was added, specifically
   so that build environments requesting `--with-all` but lack `libltdl` would
   abort and require either to install the dependency or explicitly forfeit
   the tool (some distro packages missed it quietly in the past) [#1560]

 - Existing openssl-1.1.0 support added for NUT v2.8.0 release was tested to
   be sufficient without deprecation warnings for builds against openssl-3.0.x
   (but no real-time testing was done yet) [#1547]

 - upslog: Added support for logging multiple devices with one call to the
   program [#1604]
